==> CancerBocchi/Analog_PFC_1PH/HCI/oled.c <==
// #include"main.h"
#include "oled.h"
#include "spi.h"

#include "OLEDUI.h"
#include "inc.h"

// /*
// *48*32字体
// */
// uint8_t num40x32[]=
// {
// 0x00,0x00,0x00,0xE0,0xE0,0xE0,0xE0,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,
// 0x1E,0x1E,0xE0,0xE0,0xE0,0xE0,0x00,0x00,0x00,0x00,0x00,0x00,0xFF,0xFF,0xFF,
// 0xFF,0x00,0x00,0x00,0xC0,0xC0,0xC0,0xC0,0x3C,0x3C,0x3C,0xFF,0xFF,0xFF,0xFF,
// 0x00,0x00,0x00,0x00,0x00,0x00,0xFF,0xFF,0xFF,0xFF,0x3C,0x3C,0x3C,0x03,0x03,
// 0x03,0x03,0x00,0x00,0x00,0xFF,0xFF,0xFF,0xFF,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x03,0x03,0x03,0x03,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x03,
// 0x03,0x03,0x03,0x00,0x00,0x00,//"0",0

// 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xE0,0xE0,0xE0,0xE0,0xFE,0xFE,0xFE,0xFE,
// 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x00,0x03,0x03,0x03,0x03,0xFF,0xFF,0xFF,0xFF,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xFF,
// 0xFF,0xFF,0xFF,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x00,0x00,0x00,0x00,0x3C,0x3C,0x3C,0x3C,0x3F,0x3F,0x3F,0x3F,0x3C,0x3C,0x3C,
// 0x3C,0x00,0x00,0x00,0x00,0x00,//"1",1

// 0x00,0x00,0x00,0xE0,0xE0,0xE0,0xE0,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,
// 0x1E,0x1E,0xE0,0xE0,0xE0,0xE0,0x00,0x00,0x00,0x00,0x00,0x00,0x03,0x03,0x03,
// 0x03,0x00,0x00,0x00,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0x3F,0x3F,0x3F,0x3F,
// 0x00,0x00,0x00,0x00,0x00,0x00,0xC0,0xC0,0xC0,0xC0,0x3C,0x3C,0x3C,0x03,0x03,
// 0x03,0x03,0x03,0x03,0x03,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x3F,0x3F,0x3F,0x3F,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,
// 0x3C,0x3C,0x3C,0x00,0x00,0x00,//"2",2

// 0x00,0x00,0x00,0xE0,0xE0,0xE0,0xE0,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,
// 0x1E,0x1E,0xE0,0xE0,0xE0,0xE0,0x00,0x00,0x00,0x00,0x00,0x00,0x03,0x03,0x03,
// 0x03,0x00,0x00,0x00,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0x3F,0x3F,0x3F,0x3F,
// 0x00,0x00,0x00,0x00,0x00,0x00,0xC0,0xC0,0xC0,0xC0,0x00,0x00,0x00,0x03,0x03,
// 0x03,0x03,0x03,0x03,0x03,0xFC,0xFC,0xFC,0xFC,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x03,0x03,0x03,0x03,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x03,
// 0x03,0x03,0x03,0x00,0x00,0x00,//"3",3

// 0x00,0x00,0x00,0xFE,0xFE,0xFE,0xFE,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xFE,
// 0xFE,0xFE,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xFF,0xFF,0xFF,
// 0xFF,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xFF,0xFF,0xFF,0x00,0x00,0x00,0x00,
// 0x00,0x00,0x00,0x00,0x00,0x00,0x03,0x03,0x03,0x03,0x03,0x03,0x03,0x03,0x03,
// 0x03,0x03,0xFF,0xFF,0xFF,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x3F,0x3F,0x3F,0x00,
// 0x00,0x00,0x00,0x00,0x00,0x00,//"4",4

// 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xFE,0xFE,0xFE,0x1E,0x1E,0x1E,0x1E,0x1E,
// 0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x00,0xFF,0xFF,0xFF,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0x00,0x00,0x00,0x00,
// 0x00,0x00,0x00,0x00,0x00,0x00,0xC0,0xC0,0xC0,0xC0,0x03,0x03,0x03,0x03,0x03,
// 0x03,0x03,0x03,0x03,0x03,0xFC,0xFC,0xFC,0xFC,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x03,0x03,0x03,0x03,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x03,
// 0x03,0x03,0x03,0x00,0x00,0x00,//"5",5

// 0x00,0x00,0x00,0xE0,0xE0,0xE0,0xE0,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,
// 0x1E,0x1E,0xE0,0xE0,0xE0,0xE0,0x00,0x00,0x00,0x00,0x00,0x00,0xFF,0xFF,0xFF,
// 0xFF,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0x03,0x03,0x03,0x03,
// 0x00,0x00,0x00,0x00,0x00,0x00,0xFF,0xFF,0xFF,0xFF,0x03,0x03,0x03,0x03,0x03,
// 0x03,0x03,0x03,0x03,0x03,0xFC,0xFC,0xFC,0xFC,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x03,0x03,0x03,0x03,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x03,
// 0x03,0x03,0x03,0x00,0x00,0x00,//"6",6

// 0x00,0x00,0x00,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0xFE,
// 0xFE,0xFE,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x00,0x00,0x00,0x00,0xC0,0xC0,0xC0,0xC0,0x3F,0x3F,0x3F,0x00,0x00,0x00,0x00,
// 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xC0,0xC0,0xC0,0x3F,0x3F,
// 0x3F,0x3F,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x00,0x00,0x00,0x00,0x3F,0x3F,0x3F,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x00,0x00,0x00,0x00,0x00,0x00,//"7",7

// 0x00,0x00,0x00,0xE0,0xE0,0xE0,0xE0,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,
// 0x1E,0x1E,0xE0,0xE0,0xE0,0xE0,0x00,0x00,0x00,0x00,0x00,0x00,0x3F,0x3F,0x3F,
// 0x3F,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0x3F,0x3F,0x3F,0x3F,
// 0x00,0x00,0x00,0x00,0x00,0x00,0xFC,0xFC,0xFC,0xFC,0x03,0x03,0x03,0x03,0x03,
// 0x03,0x03,0x03,0x03,0x03,0xFC,0xFC,0xFC,0xFC,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x03,0x03,0x03,0x03,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x03,
// 0x03,0x03,0x03,0x00,0x00,0x00,//"8",8

// 0x00,0x00,0x00,0xE0,0xE0,0xE0,0xE0,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,0x1E,
// 0x1E,0x1E,0xE0,0xE0,0xE0,0xE0,0x00,0x00,0x00,0x00,0x00,0x00,0x3F,0x3F,0x3F,
// 0x3F,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xC0,0xFF,0xFF,0xFF,0xFF,
// 0x00,0x00,0x00,0x00,0x00,0x00,0xC0,0xC0,0xC0,0xC0,0x03,0x03,0x03,0x03,0x03,
// 0x03,0x03,0x03,0x03,0x03,0xFF,0xFF,0xFF,0xFF,0x00,0x00,0x00,0x00,0x00,0x00,
// 0x03,0x03,0x03,0x03,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x3C,0x03,
// 0x03,0x03,0x03,0x00,0x00,0x00,//"9",9

// };

// 通过寄存器操作spi
void SpiTransmit(uint8_t data)
{
	HAL_SPI_Transmit(&hspi1,&data,1,100);
	//Block_UART_printf(&huart1,"%d\n",state);
	// while ((SPI1->SR & (1 << 1)) == 0); // 等待发送缓冲区为空
	// SPI1->DR = data;
	// while ((SPI1->SR & 6272));
	// while ((SPI1->SR & (1 << 1)) == 0); // 等待发送缓冲区为空
	// *((uint8_t *)&(SPI1->DR) + 1) = data;//只往低八位赋值，不然低八位发完还会接着发送一个0x00(高八位被发出来了)，好像只是f0系列的bug
	// while ((SPI1->SR & 6272));

}

/*OLED硬件复位
 */
void OLED_Reset(void)
{
	OLED_RST_CLR;
	HAL_Delay(10);
	OLED_RST_SET;
	HAL_Delay(5);
}

/*发送8位命令寄存器地址 Add
 */
void OLED_WriteAdd(uint8_t Add)
{
	OLED_DC_CLR;
	SpiTransmit(Add);
}

/*向OLED发送一个8位数据 data
 */
void OLED_WriteData(uint8_t data)
{
	OLED_DC_SET;
	SpiTransmit(data);
}

/*
 *清屏
 */
void OLED_Clear(void)
{
	uint8_t i, n;

	for (i = 0; i < 8; i++)
	{
		OLED_WriteAdd(i+0xb0);//设置页地址（0~7）
#if Screen_Type == ST7567  
		OLED_WriteAdd(((0x00&0xf0)>>4)|0x10);//设置显示位置—列低地址
		OLED_WriteAdd((0x00&0x0f)|0x00);//设置显示位置—列高地址
#elif Screen_Type == SH1106
		OLED_WriteAdd(0x01);	 // 设置显示位置—列低地址
		OLED_WriteAdd(0x10);	 // 设置显示位置—列高地址
#endif
		for (n = 0; n < 128; n++)
		{
			OLED_WriteData(0x00);
		}
	}
}

void OLED_Init(void)
{
#if Screen_Type == ST7567 
	__HAL_SPI_ENABLE(&hspi1);
	OLED_CS_CLR;
	OLED_Reset();//硬复位
	HAL_Delay(5);

    OLED_WriteAdd(0xe2);//软复位

    OLED_WriteAdd(0xaf);//0xaf显示器开
    OLED_WriteAdd(0x2f);//0x2f升压电路,电压管理电路,
	   	   
    OLED_WriteAdd(0x25);//0x20-0x27为V5电压内部电阻调整设置 

    OLED_WriteAdd(0x81);// SET EV 调对比度
    OLED_WriteAdd(0x18);//0x01-0x3f电量寄存器设置模式

    OLED_WriteAdd(0xa1);//0xa0为Segment正向,0xa1 为Segment反向
	   	   
    OLED_WriteAdd(0xc0);//0xc0正向扫描,0xc8反射扫描

    OLED_WriteAdd(0xa6);//0xa6正向显示,0xa7反向显示
    OLED_WriteAdd(0xa4);//0xa4正常显示,0xa5全屏点亮

    OLED_WriteAdd(0xf8);//背压比设置
    OLED_WriteAdd(0x00);//00--10
	OLED_Clear();//清屏

#elif Screen_Type == SH1106 

	OLED_CS_CLR;
	OLED_Reset();

	// OLED_WriteData(0x00);

	OLED_WriteAdd(0xAE); // set display display ON/OFF,AFH/AEH
	OLED_WriteAdd(0x20);
	OLED_WriteAdd(0x01);
	// set display start line:COM0
	OLED_WriteAdd(0x40);
	OLED_WriteAdd(0xB0);
	// 亮度设置
	OLED_WriteAdd(0x81);
	OLED_WriteAdd(0xFF); // 该数字越大，OLED越亮

	OLED_WriteAdd(0xA0); // entire display on: A4H:OFF/A5H:ON
	OLED_WriteAdd(0xC0); // 该指令控制显示方向显示方向0xc8或者0xc0
	// OLED_WriteAdd(0xC0);

	OLED_WriteAdd(0xA8); // set multiplex ratio
	OLED_WriteAdd(0x3F); // 1/64duty
	OLED_WriteAdd(0xD3); // set display offset
	OLED_WriteAdd(0x00); //
	OLED_WriteAdd(0xD5); // set display clock divide ratio/oscillator frequency
	OLED_WriteAdd(0x80); // 105Hz
	OLED_WriteAdd(0xD9); // Dis-charge /Pre-charge Period Mode Set
	OLED_WriteAdd(0xF1); //
	OLED_WriteAdd(0xDA); // Common Pads Hardware Configuration Mode Set
	OLED_WriteAdd(0x12); //
	OLED_WriteAdd(0xDB); // set vcomh deselect level
	OLED_WriteAdd(0x40); // VCOM = β X VREF = (0.430 + A[7:0] X 0.006415) X VREF
	OLED_WriteAdd(0xA4);
	OLED_WriteAdd(0xA6);
	OLED_WriteAdd(0xAF); // set display display ON/OFF,AEH/AFH

	OLED_WriteAdd(0xAF);
	OLED_WriteAdd(0xA6); // set normal/inverse display: 0xA6:正显/0xA7:反显

	OLED_Clear();
	OLED_WriteAdd(0xb0); // 设置页
	OLED_WriteAdd(0x10); // 设置列的显示位置的高位
	OLED_WriteAdd(0x01); // 低位

#endif
}

// void OLED_Show_Number_16(uint8_t x,uint8_t  y,uint8_t  number )
// {
// 	uint32_t i=0;
// 	OLED_Set_Pos(x,y);
// 	//显示数字的上半部分
// 	for(i=0;i<8;i++)
// 	{
// 		OLED_WriteData(number_array[number*16+i]);
// 	}
// 	//显示数字的下半部分
// 	OLED_Set_Pos(x,y+1);
// 	for(i=8;i<16;i++)
// 	{
// 		OLED_WriteData(number_array[number*16+i]);
// 	}
// }

// void OLED_Show_Number_40x32(uint8_t x,uint8_t  y,uint8_t  number )
// {
// 	uint32_t i=0;
// 	OLED_Set_Pos(x,y);

// 	for(i=0;i<24;i++)
// 	{
// 		OLED_WriteData(num40x32[number*96+i]);
// 	}
// 	//显示数字的下半部分
// 	OLED_Set_Pos(x,y+1);
// 	for(i=24;i<48;i++)
// 	{
// 		OLED_WriteData(num40x32[number*96+i]);
// 	}
// 	OLED_Set_Pos(x,y+2);
// 	for(i=48;i<72;i++)
// 	{
// 		OLED_WriteData(num40x32[number*96+i]);
// 	}
// 	OLED_Set_Pos(x,y+3);
// 	for(i=72;i<96;i++)
// 	{
// 		OLED_WriteData(num40x32[number*96+i]);
// 	}
// }
